# cortex-bsp-kit

./: .gitignore  CMakeLists.txt  README.md
benchmark/embench-2.0/: CMakeLists.txt
benchmark/embench-2.0/examples/riscv32/ri5cyverilator/: boardsupport.c
benchmark/embench-2.0/src/md5sum/: md5.c
benchmark/embench-2.0/support/: main.c  support.h
bsp/cortex-m85/renesas-ra8m1/: CMakeLists.txt
bsp/cortex-m85/renesas-ra8m1/Release/: baremetal_ek_ra8m1_ep.elf  baremetal_ek_ra8m1_ep.elf.in  baremetal_ek_ra8m1_ep.map  baremetal_ek_ra8m1_ep.rpd  baremetal_ek_ra8m1_ep.sbd  baremetal_ek_ra8m1_ep.srec  compile_commands.json  makefile  makefile.init  sources.mk
bsp/cortex-m85/renesas-ra8m1/Release/ra/board/ra8m1_ek/: board_init.d  board_init.o.in  board_leds.d  board_leds.o.in  subdir.mk
bsp/cortex-m85/renesas-ra8m1/Release/ra/fsp/src/bsp/cmsis/Device/RENESAS/Source/: startup.d  startup.o.in  subdir.mk  system.d  system.o.in
bsp/cortex-m85/renesas-ra8m1/Release/ra/fsp/src/bsp/mcu/all/: bsp_clocks.d  bsp_clocks.o.in  bsp_common.d  bsp_common.o.in  bsp_delay.d  bsp_delay.o.in  bsp_group_irq.d  bsp_group_irq.o.in  bsp_guard.d  bsp_guard.o.in  bsp_io.d  bsp_io.o.in  bsp_irq.d  bsp_irq.o.in  bsp_macl.d  bsp_macl.o.in  bsp_register_protection.d  bsp_register_protection.o.in  bsp_rom_registers.d  bsp_rom_registers.o.in  bsp_sbrk.d  bsp_sbrk.o.in  bsp_sdram.d  bsp_sdram.o.in  bsp_security.d  bsp_security.o.in  subdir.mk
bsp/cortex-m85/renesas-ra8m1/Release/ra/fsp/src/r_ioport/: r_ioport.d  r_ioport.o.in  subdir.mk
bsp/cortex-m85/renesas-ra8m1/Release/ra_gen/: common_data.d  common_data.o.in  hal_data.d  hal_data.o.in  main.d  main.o.in  pin_data.d  pin_data.o.in  subdir.mk  vector_data.d  vector_data.o.in
bsp/cortex-m85/renesas-ra8m1/Release/src/: baremetal_ep.d  baremetal_ep.o.in  hal_entry.d  hal_entry.o.in  subdir.mk
bsp/cortex-m85/renesas-ra8m1/Release/src/SEGGER_RTT/: SEGGER_RTT.d  SEGGER_RTT.o.in  SEGGER_RTT_printf.d  SEGGER_RTT_printf.o.in  subdir.mk
bsp/cortex-m85/renesas-ra8m1/ra_cfg/fsp_cfg/bsp/: board_cfg.h  bsp_cfg.h  bsp_mcu_device_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
bsp/cortex-m85/renesas-ra8m1/ra_gen/: bsp_clock_cfg.h  main.c  pin_data.c  support.h  vector_data.c  vector_data.h
bsp/cortex-m85/renesas-ra8m1/script/: fsp.ld  memory_regions.ld
cmake/: AddBenchmark.cmake
